--- a/GraphismVAS0.csproj
+++ b/GraphismVAS0.csproj
@@ -32,9 +32,6 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GraphicsService">
-      <HintPath>..\VAS\3Party\GraphicsService.dll</HintPath>
-    </Reference>
     <Reference Include="RenderEngine">
       <HintPath>..\VAS\3Party\RenderEngine.dll</HintPath>
     </Reference>
@@ -54,7 +51,7 @@
     <Compile Include="ActiveInfosManagement\OutputController\InfoActionsGeneratorFactoryVAS0.cs" />
     <Compile Include="ActiveInfosManagement\ServicesController\InfoStateControllerAnchorPoint.cs" />
     <Compile Include="ActiveInfosManagement\ServicesController\InfoStateControllerFactoryVAS0.cs" />
-    <Compile Include="ActiveInfosManagement\ServicesController\Services\Microtimer.cs" />
+    <Compile Include="Services\Microtimer.cs" />
     <Compile Include="ActiveInfosManagement\ServicesController\Services\ServiceAnchorInfo.cs" />
     <Compile Include="GraphismVAS0KeyWords.cs" />
     <Compile Include="GraphismVAS2015_0.cs" />
@@ -62,6 +59,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\..\..\Develop Files\Projects.TFS\DTK\TVGraphics\GraphicsService\GraphicsService\GraphicsService.csproj">
+      <Project>{c46f5fdd-b6ed-4421-82c6-ee2faf23c991}</Project>
+      <Name>GraphicsService</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ComputerVisionFramework\ComputerVisionFramework.vcxproj">
       <Project>{f09acb25-f03b-4669-9310-f0a8ae9d3bba}</Project>
       <Name>ComputerVisionFramework</Name>
